--- a/task3position.html
+++ b/task3position.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>task3</title>
-		<link rel="stylesheet" type="text/css" href="style3.css">
+		<link rel="stylesheet" type="text/css" href="css/style3.css">
 	</head>
 	<body>
 		<div>
