--- a/task5.html
+++ b/task5.html
@@ -7,17 +7,17 @@
 	</head>
 	<body>
 		<header>
-			<h1></h1>
-			<nav>
-				<ol>
-					<li>导航链接一</li>
-					<li>导航链接二</li>
-					<li>导航链接三</li>
-					<li>导航链接四</li>
-				</ol>
-			</nav>
+			<h1 class="logo"></h1>
+			<ul class="nav-bar clear-fix">
+				<li><a href="#">导航链接一</a></li>
+				<li><a href="#">导航链接二</a></li>
+				<li><a href="#">导航链接三</a></li>
+				<li><a href="#">导航链接四</a></li>
+			</ul>
 		</header>
-		<article>
+		<main class="clear-fix">
+		<div class="main clear-fix">
+		<article class="content">
 			<hgroup>
 				<h2>文章一级标题</h2>
 				<h3>文章二级标题</h3>
@@ -31,7 +31,7 @@
 				这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" target="_blank">这里有一个链接点击后打开新窗口链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
 			</p>
 		</article>
-		<article>
+		<article class="content">
 			<hgroup>
 				<h2>文章一级标题</h2>
 				<h3>文章二级标题</h3>
@@ -41,13 +41,13 @@
 				这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<br>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。
 			</p>
 			<img src="img/img1.png">
-			<ul>
+			<ul class="project">
 				<li>列表项目一</li>
 				<li>列表项目二</li>
 				<li>列表项目三</li>
 			</ul>
 		</article>
-		<div>
+		<div class="content pic clear-fix">
 			<figure>
 				<figcaption>好看的图片</figcaption>
 				<img src="img/img1.png">
@@ -89,11 +89,11 @@
 				<img src="img/img1.png">
 			</figure>
 		</div>
-		<article>
+		<article class="content">
 			<h2>最后一篇文章一级标题</h2>
 			<h3>文章二级标题</h3>
 			<time>文章作者 文章发表时间</time>
-			<ol>
+			<ol class="rank">
 				<li>排名1</li>
 				<li>排名2</li>
 				<li>排名3</li>
@@ -111,22 +111,22 @@
 					<tr>
 						<td>表内容单元格</td>
 						<td>表内容单元格</td>
-						<td>操作</td>
+						<td><a href="#">操作</a></td>
 					</tr>
 					<tr>
 						<td>表内容单元格</td>
 						<td>表内容单元格</td>
-						<td>操作</td>
+						<td><a href="#">操作</a></td>
 					</tr>
 					<tr>
 						<td>表内容单元格</td>
 						<td>表内容单元格</td>
-						<td>操作</td>
+						<td><a href="#">操作</a></td>
 					</tr>
 					<tr>
 						<td>表内容单元格</td>
 						<td>表内容单元格</td>
-						<td>操作</td>
+						<td><a href="#">操作</a></td>
 					</tr>
 				</tbody>
 				<tfoot>
@@ -137,24 +137,27 @@
 				</tfoot>
 			</table>	
 		</article>
-		<aside>
+		</div>
+		<aside class="content form clear-fix">
 			<h2>这里以后是一个侧栏，这是侧栏的标题</h2>
 			<form>
-				<div>
+				<div class="input-email">
 					<label>请输入邮箱地址<input type="text" value="这是一个文本输入框"></label>
-					<span>邮箱地址请按要求格式输入</span>
+					<p>邮箱地址请按要求格式输入</p>
 				</div>
-				<div>	
+				<div class="input-pass">	
 					<label>请输入密码<input type="password" value="1111111"></label>
-					<label>请重复输入密码<input type="password" value="1111111"></label>
-					<span>密码请为6-16位英文数字</span>
 				</div>
-				<div>
+				<div class="input-pass2">
+					<label>请重复输入密码<input type="password" value="1111111"></label>
+					<p>密码请为6-16位英文数字</p>
+				</div>
+				<div class="input">
 					<label>性别</label>
-					<label><input type="radio" name="sex">男</label>
+					<label><input type="radio" name="sex" checked>男</label>
 					<label><input type="radio" name="sex">女</label>
 				</div>
-				<div>
+				<div class="input">
 					<label>城市</label>
 					<select>
 						<option>北京</option>
@@ -162,18 +165,19 @@
 						<option>广州</option>
 					</select>
 				</div>
-				<div>
+				<div class="input">
 					<label>爱好</label>
 					<label><input type="checkbox">运动</label>
 					<label><input type="checkbox">艺术</label>
 					<label><input type="checkbox">科学</label>
 				</div>
-				<div>
-					<textarea>这是一个多行输入框，输入您的个人描述</textarea>
+				<div class="textarea">
+					<label>个人描述<textarea>这是一个多行输入框，输入您的个人描述</textarea></label>
 				</div>
 				<input type="submit" value="确认提交">
 			</form>
 		</aside>
+		</main>
 		<footer>
 			<span>版权所有&#64;</span>
 		</footer>
