--- a/task6.html
+++ b/task6.html
@@ -10,5 +10,116 @@
 			<span>ife.baidu.com</span>
 			<time>2016&nbsp;03</time>
 		</header>
+		<figure class="left-big">
+			<img src="img/left_big.jpg">
+			<div class="left"></div>
+			<div class="right"></div>			
+		</figure>
+		<div class="label">
+			<div>
+				<p>ABOUT</p>
+				<p>TECHNOLOGE</p>
+			</div>
+			<div>
+				<p>About technologe about technologe</p>
+				<p>about technologe</p>
+			</div>
+			<div>700</div>
+			<div>
+				<p>3.2</p>
+				<div>
+					<p>css</p>
+					<p>csssccsccscssc</p>
+				</div>
+			</div>
+		</div>
+		<div class="content">
+			<article class="what">
+				<h2>What</h2>
+				<p>
+					前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端
+				</p>
+			</article>
+			<article class="when">
+				<h2>When</h2>
+				<p>
+					前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端
+				</p>
+			</article>
+			<article class="how">
+				<h2>How</h2>
+				<p>
+					端前端前端前端前端前端前端前端前端前端前端前端前端前端前
+				</p>
+				<div>
+					<p>What--------<span>40%</span></p>
+					<p>What--------<span>30%</span></p>
+					<p>What--------<span>30%</span></p>
+				</div>
+			</article>
+		</div>
+		<article class="left-bottom">
+			<h2 class="title">
+				<span>THE</span>
+				<span>TECHNOLOGE OF FRONT</span>
+				<span>前端技术领域</span>
+			</h2>
+			<div class="main">	
+
+				<p class="first-letter">
+				前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前
+				</p>
+				<img src="img/img3.jpg">
+				<p class="not-first">
+				前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+				</p>
+
+				<p class="not-first">
+				前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前
+				</p>
+
+			</div>
+		</article>
+		<article class="right-bottom">
+			<div>
+				<img src="img/img4.jpg">
+				<div class="right-bottom-title">
+					<i></i>
+					<span>前端技术</span>
+					<span>前端技术前端技术</span>
+				</div>
+			</div>
+			<div class="right-bottom-div">
+				<ul class="right-bottom-list">
+					<li><span class="left-s">前端前端前端前端前端前端</span>....................<span class="right-s">前端</span></li>
+					<li><span class="left-s">前端前端前端前端</span>...........................<span class="right-s">前端前</span></li>
+					<li><span class="left-s">前端前端前端前端前端前端前端</span>.................<span class="right-s">前端</span></li>
+				</ul>
+				<div class="right-div-label">
+					<span>0</span>
+					<span></span>
+					<div>
+						<p>ONE TWO</p> 
+						<p>THREE FORE FIVE</p>
+						<p>hello world hello world</p>
+						<p>hello world</p>
+					</div>
+				</div>
+				<div class="right-div-content">
+					
+					<p><span class="span1">“</span>world hello world</p>
+					<p>hello world hello world</p>
+					<p>hello world hello world</p>
+					<p>hello world hello world</p>
+					<p>hello world hello world</p>
+					<p>hello world<span class="span2">”</span></p>
+					
+				</div>
+			</div>
+			
+		</article>
+		<footer>
+			<span>ife.baidu.com</span>
+		</footer>
 	</body>
 </html>
